fixes: button height and notice on mobile

--- a/assets/scss/components/_buttons.scss
+++ b/assets/scss/components/_buttons.scss
@@ -5,6 +5,7 @@
   font-weight: 300;
   cursor: pointer;
   padding: 3.5px 2rem;
+  height: 3.125rem;
 
   &__white {
     background-color: white;
